# freETarget

Software/ESP32/: .clang-format  .gitignore  README.md  example_test.py
Software/ESP32/main/: CMakeLists.txt  WiFi.c  WiFi.h  analog_io.c  analog_io.h  compute_hit.c  compute_hit.h  dac.c  dac.h  diag_tools.c  diag_tools.h  freETarget.c  freETarget.h  gpio.c  gpio.h  gpio_define.c  gpio_define.h  i2c.c  i2c.h  json.c  json.h  main.c  mfs.c  mfs.h  nonvol.c  nonvol.h  pcnt.c  pcnt.h  pwm.c  pwm.h  serial_io.c  serial_io.h  speed_of_sound.c  timer.c  timer.h  token.c  token.h  wifi.c  wifi.h
