idf_component_register(SRCS  "main.c" 
                    "freETarget.c"
                    "dac.c" 
                    "pcnt.c"
                    "diag_tools.c"
                    "token.c"
                    "nonvol.c"
                    "json.c"
                    "analog_io.c"
                    "gpio.c"
                    "mfs.c"
                    "compute_hit.c"
                    "speed_of_sound.c"
                    "serial_io.c"
                    "gpio_define.c"
                    "timer.c"
                    "pwm.c"
                    "pcnt.c"
                    "i2c.c"
                    "wifi.c"
                    INCLUDE_DIRS "." 
                    REQUIRES freertos hal esp_adc esp_timer esp_wifi driver nvs_flash)
